tests/errors/first_stage/.entry/extra_chars/extra_chars.am
stop: hlt
.entry stop a
